# hermes-voicebox

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
hermes_voicebox/: __init__.py  client.py  plugin.yaml  stt.py  tts.py
hermes_voicebox/skills/voicebox/: SKILL.md
tests/: conftest.py  test_client.py  test_providers.py
